# PDF4QT-master-CLI

./: .gitignore  README.md
pdf_simplify/: CMakeLists.txt
pdf_simplify/app/: CMakeLists.txt  main.cpp
